--- a/localisation/KR_Hunan_l_simp_chinese.yml
+++ b/localisation/KR_Hunan_l_simp_chinese.yml
@@ -4319,7 +4319,7 @@
  HNN_defence_commission_3:0 "防务专署：§P法令统治§!"
  HNN_defence_commission_3_desc:0 "“湖南省防务专署”简称防署，是一个新近成立的政府机构，用以赋权汤督理统筹“一切关乎湖南防务之事宜”。其涵盖的权力范围十分广泛，让汤督理可以有效地以法令进行统治，并使其个人意愿得以充分执行。没有人再能试图颠覆汤督理。"
  HNN_lingering_kmt_insurgents:0 "残余的国民党叛匪"
- HNN_lingering_kmt_insurgents_desc:0 "尽管我们战争了国民党，但参与叛党仍在湖南盘根错节。要依靠汤芗铭督理和其部队的通力合作，才能够将国民党从我省境内连根拔除。"
+ HNN_lingering_kmt_insurgents_desc:0 "尽管我们战胜了国民党，但是参与叛乱的叛党仍在湖南盘根错节。要依靠汤芗铭督理和其部队的通力合作，才能够将国民党从我省境内连根拔除。"
  HNN_alliance_with_the_diarchy:0 "与陈渠珍的同盟"
  HNN_alliance_with_the_diarchy_desc:0 "在近期通过田应绍与陈渠珍会谈后，汤督理与其达成了共识。他们对当地状况的了解于规划湖南防务来说，可谓是无价之宝。"
  HNN_joint_drills_with_guizhou:0 "与旧黔系一同练兵"
