--- a/localisation/KR_Qing_l_simp_chinese.yml
+++ b/localisation/KR_Qing_l_simp_chinese.yml
@@ -255,12 +255,14 @@
  QIE_IGfarben_desc:0 "中国缺乏石油和橡胶的自然产出，但是如果我们能够得到新的德国化学专利，我们可以通过石化工业合成一些。"
  QIE_germanresearch:0 "大学交流计划"
  QIE_germanresearch_desc:0 "相互学习的最好办法就是体验对方的文化。通过将一些中国学生送到德国的大学，他们可以将最新的知识带回祖国。而人们也希望在中国学习的德国学生能学到一些我们的文化，并将其带回德国与他们的同胞分享。"
- QIE_debt_issue:0 "解决债务问题"
+ QIE_debt_issue:0 "前朝“遗产”"
  QIE_debt_issue_desc:0 "困扰前清的债务问题如今仍然困扰着新生的中华民国。我们确实可以向德国求助，但这可能导致我们新建立的政权在公众的压力下土崩瓦解。相反的，如果我们采取反租界立场，并且直接宣布债务违约，将会为政权增加合法性，不过如此一来德国人对我们的态度肯定不如当年对溥仪。"
+ QIE_flying_too_close_to_the_sun:0 "兵骄者败"
+ QIE_flying_too_close_to_the_sun_desc:0 "要不是直系效忠者思维敏捷，灾难般的“宣统维新”阴谋分子早就得逞了。然而，这也揭示了我们自家后院潜藏着不少令人毛骨悚然的安全漏洞！阴谋分子竟然在眼皮底下盘算了这么久，这只能说明我们在位之时多么无能。必须要推行严格的内部重组与改革了。"
  QIE_restoration:0 "宣统维新"
  QIE_restoration_desc:0 "意料之外的是，曹锟和吴佩孚的重大战略失败葬送了他们自己的政权，他们曾经的盟友背叛了他们并同满洲勋贵达成了共识。现在可以说，新政权的未来仍然不太明朗……"
- QIE_wu_constitution:0 "新宪法"
- QIE_wu_constitution_desc:0 "满族的异族政权已经被推翻，现在我们必须着手为我们的新政权创立新的宪法。尽管直系军人仍然会对其进行有限地“指导”，但如今共和派返京几乎已经是板上钉钉。"
+ QIE_wu_constitution:0 "五色旗飘扬！"
+ QIE_wu_constitution_desc:0 "辛亥先烈最终再次沉冤得昭！再也没有天潢贵胄可以盘剥中国百姓！随着民国北洋政府真正重建，总裁和大帅可以放开手脚统治，不必再向小皇帝三跪九叩了。这也为中国的共和民主指明了真正的道路。"
  QIE_unrest:0 "解决动乱"
  QIE_unrest_desc:0 "我们在八省联合崩溃时采取的中立立场最后并没能讨好到任何人，反而是适得其反的激怒了所有人。我们需要在局势变得无法控制之前迅速遏止动乱。"
  QIE_president_hu:0 "执行胡大总统改革计划"
@@ -279,8 +281,8 @@
  QIE_deligitimize_oppo_desc:0 "国会虽然是个橡皮图章，但它仍然迫使我们要对着那帮异想天开的贵族和毫不体恤民情的市民精英们空费口舌。我们应该颁定法律否认国内这些贵族团体的合法性，并将重心放在那些我们伟大的中华民国国民真正的需求上。"
  QIE_placate_intellectuals:0 "安抚知识分子"
  QIE_placate_intellectuals_desc:0 "新帝国宪政会在北京的知识分子中非常受欢迎。由于我们新的反租界立场，我们可以尝试将其纳入共和政府，将他们统一于我们的意识形态之下。"
- QIE_rebuild_arsenals:0 "重建兵工厂"
- QIE_rebuild_arsenals_desc:0 "政变后，保定武备学堂附近的战斗严重损坏了保定兵工厂的设施。我们应该清除兵工厂损坏的部分再换上新的机械，以提高我们的生产能力。"
+ QIE_rebuild_arsenals:0 "国有化勋贵资产"
+ QIE_rebuild_arsenals_desc:0 "复辟帝制之后，许多满族人与保皇派攫取了巨大的财富，并利用这些资产不断扩张他们在中华民族各要害产业的影响力。现在，他们头上那顶名为君主制的保护伞已经土崩瓦解，轮到我们收缴他们的财富了。在恢复中华的同时，我们也将利用强制征收的手段夺回属于我们自己的工厂。"
  QIE_rebuild_domestic_ind:0 "重建民用工业"
  QIE_rebuild_domestic_ind_desc:0 "席卷北京的暴力活动和骚乱摧毁了城市的大部分区域，其中包括一些工业设施。我们应该清理废墟，继而在废墟上建造更大、更先进的工厂。"
  QIE_stable_republic:0 "共和国的胜利"
@@ -549,6 +551,16 @@
  QIE_flurry_of_investment_desc:0 "在官方宣布放宽贸易限制和投资法律后，中国市场涌现出了大量民族资本家（尽管大部分是外国人）新办的企业。在他们的帮助下，政府克服了严峻的经济形势、稳定了局面。然而，由于对臭名昭彰的外来帝国主义缺少必要的审查，这让内阁出现了不小的摩擦。"
  QIE_diplomatic_genius_idea:0 "新外交使团"
  QIE_diplomatic_genius_idea_desc:0 "顾维钧作为一名优秀的外交策划者，为中华民国组建了全新的外交使团。这些新外交官们将会凭借他们的技能和专门知识帮助我们强化政权的合法性。"
+ QIE_dealing_with_dishonesty:0 "处理贪官污吏"
+ QIE_dealing_with_dishonesty_desc:0 "不幸的是，政治腐败在北京司空见惯。无论是直系的津保派，或者是其他政治团体，其中的许多政治家都有一种“巧用”财富来换取选票的冲动。为了让新生民国获得新的未来，大总统草创了一系列反腐败机构，以图打击此类嚣张的腐败行为。虽然大总统和玉帅并未对士绅在国家层面之外的独断专行、贪污腐败做太多规管，不过他们至少希望能给各督理和县官树立起自发效法的榜样。然而，这一举措却遭建制派强烈抵制、大肆反对，毕竟他们也害怕自己成为大规模逮捕和批判的下一个目标。"
+ QIE_public_safety_bureau:0 "北京市公安局"
+ QIE_public_safety_bureau_desc:0 "北京市公安局是我们的情报机构，也是直系的秘密警察，名义上由刘梦庚和王遇甲领导。利用他们二人在中原及其他地区的关系网，以及他们作为曹锟谍报主管的丰富经验，北京市公安局将确保满清复辟这样的事情再也不会发生。间谍活动、镇压内部异议和反情报工作都是该机构职权范围内的一部分。"
+ QIE_revival_of_new_nationalism:0 "新民族主义复兴"
+ QIE_revival_of_new_nationalism_desc:0 "随着中国青年党融入了广泛的共和派联盟，其针对前清王朝的正义举动在人民群众乃至国会当中都是有目共睹的。此后，我国内部民族主义言论增加，海陆空三军入伍人数激增。在爱国主义的激励下，这些真正的军国民愿意为了中华民族国家的利益而献出自己的灵魂。"
+ QIE_support_of_the_bankers:0 "银行家解囊"
+ QIE_support_of_the_bankers_desc:0 "财政总长王克敏凭借自己作为资深商人的广泛关系，以及作为中国银行创始人之一、现任总裁所积累的人脉，成功赢得了北京、上海、天津和武汉银行界的支持，他们将出资帮助我国的金融业。"
+ QIE_mass_nationalisation_of_noble_estates:0 "大规模国有化勋贵产业"
+ QIE_mass_nationalisation_of_noble_estates_desc:0 "要想彻底消除皇室和清廷的影响，仅靠废除帝制并摧毁保皇派政党仍远远不够。无量头颅无量血，何处购得真共和？我们必须剥夺勋贵们的产业、生意以及他们用来控制民众的一切倚仗。这样做或许有些残酷，但作为补偿，他们可以保留相当规模的财富，仍能为富家翁，要知道眼下中国农民仍在遭受苦难呢。"
  QIE_pragmatism_idea:0 "实用主义"
  QIE_pragmatism_idea_desc:0 "现任大总统胡适，以其实用主义的理论而闻名于世。这种思想不光光是一种意识形态那么简单，他更代表了我们同旧敌和解的一种尝试。这将会有助于我们建设政权，并加强对分裂的国家的控制。"
  QIE_encourage_dom_production:0 "鼓励国货"
@@ -657,6 +669,8 @@
  QIE_anqing_reconstruction_aid_desc:0 "安庆遭受了在八省联合的崩溃时遭到了重创，新皖系统治的地区大部受到了严重破坏。我们已向他们提供支援，并在重建工作中提供其他的帮助。"
  QIE_hubei_generals_dynamic_modifier: "湖北将军团"
  QIE_hubei_generals_dynamic_modifier_desc: "“湖北将军团”由哈汉章发起和运营，此人是一名臭名昭著的军官，曾间接参与了1917年张勋复辟的企图。这个团体遍及各个经济部门，控制着武汉经济生产。在萧耀南督理和杜锡钧等人的协助下，湖北将军团对直系增强对湖北的控制大有裨益。而这个垄断团伙也已经被间接地合法化。"
+ QIE_beiyang_patronage_dynamic_modifier: "北洋之恩庇"
+ QIE_beiyang_patronage_dynamic_modifier_desc: "我们不仅与北京的各界名流关系密切，而且在全国乃至世界各地都有着广泛的人脉。我们将翻新并改建[QIE.Capital.GetCapitalVictoryPointName]，使之成为世界文化之都！我们将通过宣扬历代贤哲的艺术作品、政治思想和文学著作，以实现中国文化的伟大复兴！"
  QIE_AOG_bank:0 "德华银行控股"
  QIE_german_influence_dynamic_modifier:0 "北京理事会的影响等级\n§g北京理事会是德国对北京政府直辖地区实施间接控制的代理人。他们直接资助了一个名为繁荣联盟的游说团体，在采用德国的企业管理方法并大力发展同德国自由贸易的同时，还在议会中占有多个席位。\n\n（此变量与市场自由主义的支持度有关。）§!\n\n每24小时更新一次"
  QIE_yiguandao_influence_dynamic_modifier:0 "一贯道的影响等级\n§g张天然和他的一贯道在我们推翻直系军阀的统治时候提供了帮助。这个神秘的教团现在越来越多得参与到我们的政治生活中。当他们提供有用的好处时，给予他们适当的赏赐可能会使他们在我国的影响力得到遏制。\n\n（此变量与国家民粹主义的支持度有关。）§!\n\n每24小时更新一次"
@@ -1968,6 +1982,27 @@
  qieflavor.57.t:0 "三弟的墓志铭"
  qieflavor.57.d:0 "烈火和钢铁摧毁了“笑面虎”的昔日领地，当地本就屈指可数的现代化进步成果现已荡然无存，接踵而至的是战争带来的生灵涂炭，这一切都在迫使难民逃离昔日的八省联合境内。我们治下的不少人正匆忙设立难民救济机构和慈善组织，以帮助这些流离失所者。令人惊讶的是，一位意想不到的资助者出现了。\n\n曹锟大帅如今成为了难民救济事业的核心人物，这的确是一道不同寻常的景象。尽管他年事已高、体弱多病，但老帅还是尽其所能动员并呼吁更多的捐款和资金以帮助流离失所的难民，并为此捐献了大半年薪，赢得了北京和外国媒体的一致赞扬。许多报刊将曹锟大帅与当年在救灾扶贫工作中表现出色的曹锐（曹锟的弟弟，曾任直隶省省长）相提并论。人们对曹锟大帅的动机众说纷纭，有人认为这是他为了抗衡吴佩孚而发起的一次公关战，也有人认为他是以此致敬去世多年的弟弟曹锐，曹锐之死给老帅造成了沉重的打击，导致他曾一度辞去所有公职。\n\n曾经为了登上大总统宝座而向议员行贿、挥金如土的曹锟，如今却号召人们捐款帮助穷苦大众，曹锟的真正动机也许只有他自己知道。"
  qieflavor.57.a:0 "“要是三弟仍在人世...”"
+ qieflavor.102.t:0 "分道扬镳"
+ qieflavor.102.d:0 "对于许多国人而言，白坚武象征着玉帅一路而来的升迁之路。不管吴佩孚跃居何位，白坚武总是能紧随其后。不过，白坚武的仕途生涯与北方的其他知识分子并无不同。他出生于直隶省，曾参加科举巧中秀才，后就读于天津北洋法政专门学校，并与同样来自直隶的同学李大钊结为至交。两人联合创办了法政杂志《言治》，宣扬他们的进步思想。\n\n毕业后，两人仍每月互致信件和电报维持联系。直皖战争后，白坚武愈发相信吴佩孚是北洋军阀中唯一值得自己效忠的人。在1920年8月写给李大钊的月信中，白坚武向李大钊介绍了吴佩孚，希望他能与自己一道支持玉帅。李大钊同意与吴佩孚的另一位盟友孙丹林会面。两年过后，第一次直奉战争刚落下帷幕不久，白坚武就立即请愿吴佩孚聘请李大钊为战略顾问。\n\n尽管李大钊最终并未加入吴佩孚一方，但他依旧数次奔赴洛阳，协助玉帅筹划恢复北洋国会、实现和平统一的方案，为“好人政府”运动开了个好头。白坚武则造访了李大钊在努力会的朋友——一群希望与吴佩孚合作以建立民主政府的京内知识分子，在那里他见到了几年前李大钊曾介绍给自己的胡适。\n\n白坚武对这名理想主义知识分子印象深刻，希望与其深化合作。只可惜，吴佩孚与努力会未能达成一致：吴佩孚拒绝在联省问题上作出任何让步，努力会的知识分子也因其镇压京汉铁路的工团罢工而不再视其为革命将军。随着吴佩孚逐渐失去第三国际的青睐，李大钊也与老友白坚武断绝了来往。\n\n当吴佩孚的上级曹锟贿赂北京国会选举他为大总统并驱逐黎元洪时，世人对“好人政府”运动的任何幻想都破灭了。胡适宣布努力会就此退出军阀政坛，结束“好人政府”运动；白坚武继续辅佐吴佩孚，李大钊则愈发靠拢国民党的革命政治。"
+ qieflavor.102.a:0 "只是当时已惘然..."
+ qieflavor.104.t:0 "第一夫人，国际名媛"
+ qieflavor.104.d:0 "有史以来，中国传统礼教就规定女性的地位要低于她们的丈夫。然而在黄惠兰，即顾维钧的夫人身上，人们看到的更多是一名风度翩翩的名媛，打破了中国传统和西方现代界限。顾维钧的这位贤内助常常举办盛宴，配备美酒与珍馐，这也展现了她在幕后谈话和与中国上流人士构筑关系上的天赋。\n\n这也难怪随着顾维钧再登高位，这位尽职尽责的夫人又开始了新的宴会热潮。顾维钧夫人一如既往地为丈夫争取精英和权贵的支持，同时她也借此机会分享各种轶闻，诸如与皇室家庭间的趣事和在北京茶馆街巷中能打听到的流言。宴会往往以欢乐的气氛落下帷幕，而有些客人可能会认为也许顾维钧夫妇二人中，夫人才是权力的中心。"
+ qieflavor.104.a:0 "亲爱的中国领导者！还有她的顾大总统..."
+ qieflavor.105.t:0 "儒雅的秀才将军"
+ qieflavor.105.d:0 "北洋政府之外的人往往会认为玉帅只不过是个用怀柔手段扼杀民主的隐性独裁者而已。但在“玉帅”的形象之下，吴佩孚有着坚定不移的政治哲学信仰。吴佩孚原本想成为一名传统的儒生，但生活的剧变迫使他不得不放下书卷，走上了弃文从武、舞刀弄枪之路。但时至今日，吴佩孚依然坚持着手不释卷、反躬自省的儒家生活方式。他以一位开明的军阀自居，而在这个专制军阀混战不息的时代中，他也确实是一位难得的值得众人尊敬之人。第三国际甚至曾在早年将他称为“革命将军”。\n\n学术界已经开始重新审视玉帅在北洋政府中扮演的角色、他的思想观念和政治关系，以及“传统”军阀的含义，这与一直以来人们对军阀的刻板印象形成了鲜明的对比。吴佩孚的“传统”指的是什么？是指他的意识形态传统，将儒家理念和习俗奉为圭皋，希望建设一个仁德的理想主义政府？是指他的政治理念传统，基于关系网、恩庇网组建自己的行政班底，与自己的顾问和下属维持着亲密而尊卑有序的关系？又或者，他不过是一介军阀，他的意识形态与政治理念不过是出于军政需要而决定的，其中并无什么特别的深意？\n\n不过，玉帅身上仍有许多与众不同之处。他在五卅运动中坚持爱国主义立场，并利用公共电报宣传自己的政策，用战术玩弄政治。他还响应了知识分子们领导的好人政府运动，并兑现了自己对宪政的承诺，帮助建立了具有分水岭意义的“好人内阁”。吴佩孚大帅为中华民族鞠躬尽瘁，而今时今日，民国依然仰仗玉帅的刀剑来保驾护航。"
+ qieflavor.105.a:0 "传统军阀乎，革新政客乎？"
+ qieflavor.106.t:0 "国家多灾多难的统一之路"
+ qieflavor.106.d:0 "过去数十年间，联邦制与集权制之争撕裂了中华民国。尽管革命党的时代已经结束了，但过去的南北对立从某种角度来看也是联邦制与集权制纷争的一种形式。当然了，南北双方都不乏这两种理念的支持者，但北有张作霖、吴佩孚、曹锟等集权霸主，南有唐继尧、赵恒惕、陈炯明等联省巨头，相较而言，北方的联省派和南方的集权派都在数量上占下风。不过，南北和解、弥合分歧的精神始终不缺继承者，联省派就经常试图接触玉帅以实现国家统一。\n\n吴佩孚曾受到胡适等人的推动，试图利用被视为“中国的汉密尔顿与富兰克林”的国会议员们来独揽国家大权，再将权力下放给人民。但吴佩孚主张北京政府至上，而胡适是个要求省级自治的联省派，二人的理念出现了冲突，胡适质疑若各省和各地方议会都无法掌握权力，那百姓能拿到多少权力就很成问题了。胡适担心和误解吴佩孚会试图推迟自治以维护自己的统治并阻止民主，但他没有意识到吴佩孚坚持要建立中央集权的单一制国家并非出于军阀保护自己的枪杆子的欲望，也不是在否定民主原则。\n\n吴佩孚坚定捍卫人民各尽其能参政议政的意愿，热情地提倡大众参与政治。他所担心的并非是政治权利的下放，而是让各省进行政治自治。事实上，可能正是这种自治在1920年代成为了国家统一的最大障碍，并且流毒至今。"
+ qieflavor.106.a:0 "旧日的错误仍纠缠着我们。"
+ qieflavor.108.t:0 "新时代儒家"
+ qieflavor.108.d:0 "文人们对吴佩孚的指责大多与胡适如出一辙，认为其只是想独揽大权。但是，吴佩孚对所谓省级自治的顽固态度并非出于对权力的贪婪迷恋，而是出于对联省派的了解与中华民族迫切需要的、尽善尽美的“好人政府”的理想追求。\n\n那些所谓的联省派们哪一个不是担心中央政府的干涉而做出的民主呼吁呢？未上台时高举民主大旗，要搞省宪运动，一旦上了台立刻换一种脸面对省宪这也不是那也不是，对省议院也是充满了微词。\n\n藉由对儒家文化的深刻造诣，吴佩孚在其仕途生涯中逐渐成为一名“秀才将军”。他极力反对黄赌毒，钟爱诗歌、书法与中国哲学等传统文化。例如，张其锽就与吴佩孚在思想上有诸多相通之处，都对儒道经典兴趣颇深。甚至于康有为与章太炎之类的知名学者也与吴佩孚保持着良好关系。\n\n吴佩孚将他的政治理想付诸于言辞，不断强调儒家伦理是中华文明与国家建设的基石，阐明西方政治纲领与本土思想体系的兼容性。在吴佩孚看来，三民主义恰恰体现了儒家教义的内涵，而非与之相悖。在《春秋》中，孔子提出了近似于民族主义的“尊王攘夷”思想；在《礼记》中，孔子也表达了类似民生主义的理论；而在《尚书》中，更是记载有“得人者兴，失人者崩”的警句。\n\n不过，吴佩孚对现代思想同样报以高度肯定，因此他的思想并不单纯是对儒家思想的守旧心理。玉帅深知，民主是世界文明发展的第一动力，需要新的制度及治理方法，而囹圄于政治传统中固有的专制主义的中国恰好在此方面有所缺憾。"
+ qieflavor.108.a:0 "既是革新派，亦是守旧派？"
+ qieflavor.109.t:0 "民主原则"
+ qieflavor.109.d:0 "“分权乃民主政治之度，民主亦为现代政治之基。我国行共和之治，究其本质在于还政于民。国家兴衰，皆应为全体国民惦念。”\n\n玉帅并不是反对社会政治变革，而是希望在西式民主与儒家仁政之间架起桥梁，在西方制度体系的运行与儒家修身养性的实践中寻找平衡：“科学与法治者，诚有益于国家建设。然若能留儒家道德之风范，则中华必冠绝于天下。”\n\n吴佩孚认为，中华文明遵循的是一种道德秩序，而非支持当今西方堕落社会运行的物质秩序。他坚信，正是这一道德秩序让中华文明超脱于同期文明：“虽造化弄人，历经沧桑，数朝数代踬仆于天下之乱，国破家碎，左衽当政，而中华国家之文明从未分化，民族道德之操守亦未凋敝。”他希望藉由儒家道德文化实现国家统一，至于省级自治与联邦体制，二者不仅是实现国家统一的障碍，同时也是中华文明的障碍。\n\n因此，只要联省运动一日与民族分离和文化分裂有所勾连，吴佩孚就一日不可能与其沆瀣一气，出卖国家。被北京知识界斥为思想逆流、臭名昭著的努力会，至今仍在长篇大论地抨击玉帅的儒家思想，称“仁义礼智信”与努力会的主张大相径庭。\n\n但是，如果把吴佩孚思想单纯歪曲为对儒家思想的生搬硬造还是莫过于有些肤浅，其本人与宪政、联邦制、实用主义及儒家思潮的接触，都构成了好人政府思想体系的重要组成部分，体现了在中华民族国家的形成过程中，集权制与联邦制、保守主义与激进主义等诸多意识形态的交融。"
+ qieflavor.109.a:0 "吴佩孚思想？有意思..."
+ qieflavor.112.t:0 "不欢而聚"
+ qieflavor.112.d:0 "自从1922年内阁和“好人政府”垮台之后，顾公馆已经很久没有举办这样的茶话会了。上一次茶话会时，中国政界和知识界的杰出人物汇聚于此，他们的讨论声回响在顾公馆的大厅中，对中国美好未来的期盼回响在每一个参加者的心中。\n\n顾维钧怀念当初的日子，而现在，他所面对的只有一群装聋作哑的与会者。多年的冷漠和迷茫让他们的姿态变得笨拙而僵硬，眼前的黑暗现实与过往的多舛国运让他们的双眼变得蒙翳而无神。新就任的大总统邀请这些以前的同志和朋友们来此，本来是打算把他们再次团结到好人政府的旗帜下，但他发现，他们之间已经蒙上了一层可悲的厚障壁了。大厅中再没有热烈的讨论，只有几句言不由衷的祝贺和肤浅琐碎的政论来勉强维持着与会者的情绪。这些倦怠的好人们已经失去了对顾维钧的信任。\n\n聚会结束后，胡适单独一人找上了顾维钧，可他也只给出了寥寥数语的警告，没有丝毫祝福或建议。顾公馆再度回到了寂静之中，大总统继续开始有条不紊地处理那些官方文书工作。"
+ qieflavor.112.a:0 "哀莫大于心死。"
  qieflavor.100.t:0 "爱新觉罗·显玗"
  qieflavor.100.d:0 "爱新觉罗·显玗，更为人熟知的是她的日文名川岛芳子，作为一名满洲贵族小姐，同时也是溥仪皇帝的远方表亲，近几年在朝廷中取得了举足轻重的地位。尽管她仍然相当年轻，但已经证明了自己是一名娴熟的野心家和阴谋家。她选择同宗社党合作以实现满洲勋贵们的目标。\n\n她于1915年由她的父亲肃亲王交给日本人收养以至于溥仪身边不少人都质疑她对帝国的忠诚。在皇帝寓居天津的时候，显玗多次敦促溥仪同日本人而非德国人进行合作使得她在皇帝的近亲中相当不受待见。十年来，大家逐渐原谅了她当年年少而无知的行为，而她也成功地使自己成为了一支不容小觑的势力。"
  qieflavor.100.a:0 "有趣"
