基本上搬完了

--- a/localisation/KR_Qing_l_simp_chinese.yml
+++ b/localisation/KR_Qing_l_simp_chinese.yml
@@ -42,6 +42,7 @@
  QIE_JIANG_BAILI_ARMY_DESC:0 "§Y指挥官介绍\n§Y生于：§L\n1882年\n大清帝国 浙江 海宁\n§Y军旅生涯：§L\n蒋百里出生于一个相对富裕的家庭，青年时期便进入清政府工作。1901年从清华大学毕业后，他曾在日本留学。1910年回国后，他曾一度回到政府短暂任职，随后又走出国门前去德国。袁世凯称帝前，蒋百里曾被迫在新成立的北洋政府中短暂任职。袁世凯所谓的“中华帝国”崩溃后，蒋百里开始同吴佩孚共事，成为了吴佩孚的密友和得力帮手，并协助吴佩孚于1928年打败了奉系军阀。此后，蒋百里成为了吴佩孚最亲近的友人。因为坚信中日之间必有一战，在20世纪30年代初的大部分时间里，他把大部分工作精力投入到战备工作中，以希望国家能够做好充分的准备来应对来自日本的入侵与威胁。\n§Y重要信息：§L\n他是一名才智过人的军事理论家，并撰写了几部关于防御战略的著作，尽管有一些人批评他的观念是从他下属那里剽窃来的。"
  QIE_wang_huaiqing: "王怀庆"
  QIE_WANG_HUAIQING_ARMY_DESC:0 "§Y指挥官介绍\n§Y生于：§L\n1875年\n大清帝国 直隶省 宁晋县\n§Y派系：§!§g津保派§!\n§Y军旅生涯：§!§g虽然王怀庆出生于一个中上流社会的官员家庭，但他父亲的酗酒和嗜赌使这个家庭陷入了贫困。王怀庆在年轻时离家参军，并协助镇压了1905年的砍刀会叛乱，成为了袁世凯的心腹。当袁世凯的称帝失败后，王怀庆站在了直系集团一侧，与曹锟和吴佩乎结为密友。虽然他麾下的几支部队在名义上隶属于大清军队，但这些军队本质上被他当作了自己的私兵，常常暴虐地向驻地附近的城镇勒索保护费。\n§Y重要信息：§L\n他被他的士兵亲切地称为“马桶将军”。有两个说法可以解释这个独特绰号的来历：第一种是他非常喜欢自己的马桶，他下令在行军打仗时要带着自己的马桶随行，在战斗时让马桶充当临时性的军旗。在一个真实性存疑的故事中，他坐在马桶顶上指挥着对一个山寨的进攻，马桶上印着中文的“王”字。在混战当中他的人马没有见到这个马桶，便变得军心涣散了起来。而王怀庆和他的部下把马桶抬到了高处，重新召集起了部队，并且（据说）激励他们爬上了陡峭的悬崖，夺取了山寨。此外，他甚至用马桶代替办公椅。第二种（也是更合理的）解释是，他的军队很少甚至完全不洗澡，闻起来就像马桶一样，因为王怀庆认为农民出身的士兵更加诚实和忠诚。§!"
+ QIE_Tong_Jixu: "佟济煦"
  QIE_aisin_gioro_zaitao: "爱新觉罗·载涛" 
  QIE_ZAITAO_ARMY_DESC:0 "§Y指挥官介绍\n§Y生于：§L\n1887年6月23日\n大清帝国 京师顺天府\n§Y军旅生涯：§L\n爱新觉罗·载涛作为溥仪的叔叔，出生于一个声名显赫的家族中，在中国只有极少数人才能享有像他那样的权势与财富。他是大行光绪皇帝的幼弟，并且在他还是个少年的时候就结识了彼时仍然是个幼童的溥仪皇帝。由于他的家族声誉，他在满洲勋贵中的地位上升飞快，1909年他就被拔擢被司稽察，并于次年被派往海外考察陆军，随后他又在1911年参加了英王乔治五世的加冕礼。载涛回国后被任命为军咨大臣并掌管禁卫军直到1912年清帝退位。1917年他曾经短暂复职，并在张勋复辟失败后立刻被撤职。最终他在1927年溥仪再次复辟时重回岗位。作为宗社党的创始成员，载涛青年时候就已经周游世界，相比于其他大多数更为年长的满洲勋贵而言，他有更开放的视野也更加支持改革。作为一名优秀的骑手，他对于近年来装甲在战场上的应用产生了浓厚的兴趣。\n§Y重要信息：§L\n业余时间，载涛热衷于骑马、京戏和中国武术。"
  QIE_aisin_gioro_pujie: "爱新觉罗·溥杰"
@@ -482,6 +483,8 @@
  QIE_legitimacy_of_the_monarchy_cao_desc:0 "大清国祚表面上已然延绵三百余载，可如今君臣伦常却已黯然失色，积重难返。在中国公民，无论是官僚、工人还是农民眼中，一众暴君僭主怀揣着改革的承诺来了又去，到头来一切却不过是原地踏步。大清奉天承命，在名义上宣称了华夏四境的法统，可却只是带着国家步步走向灭亡。若是还想让百姓信服君君臣臣之纲纪，那首先便要把他们从国乱岁凶、纷争不息的境遇中解救出来。同时也要让百姓相信一件事——清虽旧邦，其命维新。\n\n尽管矛盾重重，但这个由直系集团与满清帝王合作建立的独特制度还是得以幸存，并得到了稳定而蓬勃的发展。在曹总裁和吴大帅的庇护下，清王朝迎来了一个繁荣和现代化的新时代，并成为了全亚洲商业利益团体的朋友。虽然政治舞台上的多元化进程被忽视，但经济状况已经得到迅速改善。新兴的中产阶级迅速发展，一座座城市成为了点缀在东方的珍珠项链，农民们则庆祝着风调雨顺、年年有余。这证明了“乐寿老人”和他倡导的中西特殊外交关系是正确的，二十世纪将属于中国。"
  QIE_legitimacy_of_the_monarchy_wu:0 "君主制的合法性：§G和谐平衡§!"
  QIE_legitimacy_of_the_monarchy_wu_desc:0 "大清国祚表面上已然延绵三百余载，可如今君臣伦常却已黯然失色，积重难返。在中国公民，无论是官僚、工人还是农民眼中，一众暴君僭主怀揣着改革的承诺来了又去，到头来一切却不过是原地踏步。大清奉天承命，在名义上宣称了华夏四境的法统，可却只是带着国家步步走向灭亡。若是还想让百姓信服君君臣臣之纲纪，那首先便要把他们从国乱岁凶、纷争不息的境遇中解救出来。同时也要让百姓相信一件事——清虽旧邦，其命维新。\n\n尽管矛盾重重，但这个由直系集团与满清帝王合作建立的独特制度还是得以幸存，并得到了稳定而蓬勃的发展。在曹总裁和吴大帅的庇护下，清王朝采用了民族主义辩证法和反租界主义立场，从而得到了民众的支持。清王朝重获人民信任与执政合法性，进而对那些和谐社团的温和反对派打开了大门。随着国家重新统一，曾经信者寥寥的民主立宪君主制也近在眼前了。然而，站在皇位背后的真正力量——玉帅和保定王，两人仍然对共和梦想心怀信仰和同情，若未来爆发了新的冲突，这份和谐平衡随时可能会被破坏..."
+ QIE_fractured_empire_manchu:0 "破碎的帝国"
+ QIE_fractured_empire_manchu_desc:0 "理论上，大清帝国统御着除了东北、西藏和蒙古之外的整个中国。实际上，皇帝的权力仅限于黄河流域。尽管专横的直系已被推翻，但天下仍未定于一尊。我们只掌握了中国的部分，仍要采取谨慎措施以重固金瓯。"
  QIE_fractured_empire:0 "破碎的帝国"
  QIE_fractured_empire_desc:0 "理论上，大清帝国统御着除了满洲，西藏和蒙古之外的整个中国。实际上，皇帝的权力仅限于紫禁城内，而国会总裁曹锟的权力则仅限于国会会场内。吴佩孚是龙椅后的幕后操纵人，他对巩固自己在洛阳的政权基础和平衡军事集团之间的相互利益，比采取任何有意义的方式改善自己的国家更感兴趣。"
  QIE_stalled_80_division_reform_plan:0 "停滞的“80师改革计划”"
@@ -604,11 +607,16 @@
  QIE_liu_menggeng_plan_success:0 "刘梦庚计划成功实施"
  QIE_liu_menggeng_plan_success_desc:0 "刘梦庚的防御计划已经成功实施，我们的国家已经做好充足的准备抵抗日本人的侵略。"
  QIE_imperial_propaganda_idea:0 "神圣的宣传"
- QIE_imperial_propaganda_idea_desc:0 ""
  QIE_baojia_idea:0 "保甲制"
- QIE_baojia_idea_desc:0 ""
  QIE_rural_defense_idea:0 "民团"
- QIE_rural_defense_idea_desc:0 ""
+ QIE_revival_of_the_new_army_level1: "新军再兴"
+ QIE_revival_of_the_new_army_level1_desc: "新军被普遍认为是大清帝国为改革军队积贫积弱现状的最后一搏，却只造就了诸如袁世凯、吴佩孚或是孙传芳这样拥兵自重的枭雄。如今天命攸归，朝廷已着手重启了一项计划，旨在将重组后的新军现代化，并佐以一些必要的改革，以确保他们誓死效忠于皇帝陛下。我军满怀对君臣纲纪的责任、荣誉和热爱，把天威远播于四方。"
+ QIE_revival_of_the_new_army_level2: "$QIE_revival_of_the_new_army_level1$"
+ QIE_revival_of_the_new_army_level2_desc: "$QIE_revival_of_the_new_army_level1_desc$"
+ QIE_revival_of_the_new_army_level3: "$QIE_revival_of_the_new_army_level1$"
+ QIE_revival_of_the_new_army_level3_desc: "$QIE_revival_of_the_new_army_level1_desc$"
+ QIE_revival_of_the_new_army_level4: "$QIE_revival_of_the_new_army_level1$"
+ QIE_revival_of_the_new_army_level4_desc: "$QIE_revival_of_the_new_army_level1_desc$"
  QIE_expansionist_religion:0 "一贯道再起"
  QIE_expansionist_religion_desc:0 ""
  QIE_missionary_idea:0 "派遣传教士"
@@ -695,6 +703,7 @@
  QIE_hire_legation_exiles:0 "雇佣使馆城市的流亡军官"
  QIE_hire_legation_exiles_desc:0 "那些在上海、天津或者其他使馆城市被清洗的社会渣滓在廉价的酒精、女人和脱罪的诱惑下来到了我们这里。他们中的很多都曾经是那支万国海军的水手，显然他们也不算是最野蛮的人，所以他们仍然能为我们新生的海军贡献一份力量。"
  QIE_hire_flying_tigers:0 "雇佣飞虎队"
+ QIE_hire_mercenaries_decisions:0 "雇佣顾问"
  QIE_hire_mercenaries_decisions_desc:0 "尽管我们的军队可能缺乏现代战术和战略，但过去几年的国际动荡局势，使得愿意以适当价格训练我们部队的、有军事经验的洋人大有人在。"
  QIE_buy_foreign_guns_decisions:0 "购买外国军备"
  QIE_buy_foreign_guns_decisions_desc:0 "我们的反租界的立场使我们无法从德国或其他参与镇压拳乱的列强手中购买武器。但这并不意味着我们不能购买外国武器。毕竟，奥地利和他分散的政府以及斯堪的纳维亚国家都拥有强大的军事工业。我们可以跟他们谈一笔生意。"
@@ -988,7 +997,6 @@
  lec_integration_ready:0 "[LEC.GetName]已经可以被合并了。（在接受两个月的傀儡统治之后）"
  Aisin_Gioro_Pujie_dead:0 "溥仪已被推翻。"
  QIE_meet_assembly_parties_decisions:0 "与国会政党会面"
- QIE_hire_mercenaries_decisions:0 "雇佣顾问"
  QIE_bandits_hired:0 "“绿林好汉”将会在两周内于洛阳集结"
  QIE_foreign_hired:0 "由洋人领导的训练有素的军队将在数周内于洛阳集结"
  QIE_americans_hired:0 "美国流亡者将在两个月内抵达以协助我们训练部队。"
@@ -999,6 +1007,10 @@
  QIE_kriegsmarine_tooltip:0 "解锁£decision_icon_small §Y购买德国舰只§!的§H决议§!"
  QIE_jiang_baili_plan_focus_tooltip:0 "这个国策将会解锁名为§G蒋百里计划§!的任务。您务必在两年内完成这一计划的各个阶段，否则您的军队将会受到巨大负面效果的惩罚！\n"
  QIE_liu_menggeng_plan_tooltip:0 "这个国策将会解锁名为§G刘梦庚计划§!的任务。您务必在两年内完成这一计划的各个阶段，否则您的军队将会受到巨大负面效果的惩罚！\n"
+ QIE_zhili_clique_flees_tt: "§R所有直系派成员都将会逃离！§!"
+ QIE_upgrade_military_spirit_manchu_tt: "§L清军将着手对新军进行改革。§!"
+ QIE_upgrade_military_spirit_jiang_tt: "§L中央政府军将以蒋百里的构想为蓝本改革。§!"
+ QIE_upgrade_military_spirit_germany_tt: "§L中央政府军将朝德式陆军方向改革。§!"
  QIE_on_own_tooltip:0 "没有德国的支持，您将不得不自主提高军事水平。将解锁§G“自力更生”§!军事国策。"
  QIE_wu_republic_open_tt:0 "您现在可以沿着§G吴佩孚的共和国§!国策树继续游玩。"
  QIE_manchu_done_tooltip:0 "您现在可以沿着§G宣统维新§!国策树继续游玩。"
@@ -1098,9 +1110,9 @@
  qiedom.3.t:0 "债务重组"
  qiedom.3.d:0 "在过去的几年中，吴佩孚用曹锟动用了巨大的政治资本，试图重组和减少大清帝国所欠下的巨额债务。虽然这从理论上讲是可行的，但该计划遇到了许多挑战，主要原因是缺乏督理们的广泛支持。而南方动荡的传闻使得推进这个计划变得更加困难了，预计在本月晚些时候举办的新年庆祝活动结束后，曹锟将会发表关于减少国债的讲话。"
  qiedom.3.a:0 "我们期待着演讲……"
- qiedom.4.t:0 "王承斌之死"
- qiedom.4.d:0 "今天早晨，直系的高级军官，曹锟的重要盟友王承斌去世了。他的死亡对我们的指挥结构本身就是一个打击，而且它还显示出令人担忧的趋势。许多直系高级军官不是年事已高，就是身体状况不佳，甚至两者兼而有之。不仅如此，我军内部的腐败严重阻碍了年轻军官的晋升。除非作出认真的努力，否则我们的最高指挥系统将很快地被孱弱、衰老、对采用新技术和理论感到恐惧的老人填满。"
- qiedom.4.a:0 "老者智否？"
+ qiedom.4.t:0 "内务部的报告"
+ qiedom.4.d:0 "按照曹锟总裁的提案，我们将向不受直系直接控制的省份征收他们拖欠已久的税款，该提案将由高凌霨领导的内务部负责实施。在王克敏领导的财政部看来，如此简单的任务绝无可能出什么差错。毕竟各省督理都已宣誓效忠北京当局，因此都有义务向北京上缴滞纳许久的税款。鉴于北洋政府当前的财政状况，这一要求也是合乎情理的。\n\n尽管如此，高总长已在每周例会后通报内阁，绝大多数督理都已允许我们的税务人员进入其省内。但新疆督军杨增新、联帅孙传芳及其下属督理、山东督理[SQI.GetLeader]，还有沈鸿英、陈炯明、唐继尧和谭延闿四位省督都已拒绝了我们的要求。考虑到偏执多疑的杨增新、左右为难的[SQI.GetLeader]、还有阴险狡诈的孙传芳，他们的拒绝虽然令人不快，但姑且还可以理解，可华南各省抱团抗命的行为，则让人想起了当年的护法运动。\n\n话音刚落，内阁便陷入了一片混乱和互相谴责之中，直到玉帅的发言人白坚武报告称，谭延闿督理已向吴佩孚透露了南方各省的真实意图，如此乱局才逐渐平息下来。这些南方军阀组成了一个“保境自主”集团，希望能让中国回归真正的民主，摆脱所谓的军国主义者的束缚。"
+ qiedom.4.a:0 "他们在打什么算盘？"
  qiedom.5.t:0 "黑色星期一的余波"
  qiedom.5.d:0 "在黑色星期一爆发的几周后，我们似乎免于经济危机带来的最严重的破坏，但是前几日德资企业还是遭到了供应链问题和价格上涨的打击。虽然我们的经济瓦解远未达到像欧美国家那样的程度，但是这仍然对我们的经济造成了可怕的影响。"
  qiedom.5.a:0 "该死！"
@@ -1892,6 +1904,10 @@
  qiefor.140.t:0 "新疆之战"
  qiefor.140.d:0 "新疆已陷入内战！[KUM.GetLeader]正请求我们在其与[SIK.GetLeader]的战争中向他们伸出援手。汗国是蒙古帝国的最后孑遗，自17世纪以来都对大清忠心耿耿。作为宣统维新后为数不多的盟友，支持他们绝对符合我们的利益。若帮助其平定新疆，并允许其保持自治，我们也许能争得他们的忠心。毕竟，忠诚之人自当有所奖赏。大汗正在战场上等着我们！"
  qiefor.140.a:0 "派出部队！"
+ qiefor.141.t:0 "汤芗铭被击退"
+ qiefor.141.d:0 "长沙传来了零星的电报和新闻，称直系将军汤芗铭先前企图对省会发动兵变，罢黜对直系不忠的省长[HNN.GetLeader]。当然，直系政府也含糊其辞，坚称是汤将军擅作主张采取了行动。然而，关起门来说，主要指挥官们对汤芗铭方略的失败出离愤怒，对总参谋部、直系士兵乃至汤芗铭本人都加以指责。\n\n不幸中的万幸，汤芗铭从败军之中侥幸逃脱。他把直系和自己的事业看得重于一切，宣誓对直系仍然忠心耿耿，而且要做牛做马来将功补过。当然，汤将军能力不俗，对我们的赤诚之心也昭昭可鉴。但我们能鼓起勇气招募这个败军之将吗？"
+ qiefor.141.a:0 "他可以戴罪立功。"
+ qiefor.141.b:0 "他？不需要了。"
  qieflavor.1.t:0 "突袭黑娼寮！"
  qieflavor.1.d:0 "天上下着冷雨，张蓓交，北京巡警厅的巡长，安排他的手下在燕郊一家破旧的建筑附近执勤。舒缓的音乐从楼宇中传出，弥漫的烟雾渐渐遮蔽了窗棂。\n\n“您觉得着这回是丫头儿还是大烟儿？”巡长的佥事问他。“都是，要是我错了，明儿的午饭我掏钱。”张蓓交踩灭了他的香烟，并吹响了挂在胸前的哨子。六名警官破门而入涌进昏暗的大厅。张蓓交大声喊道：“巡警总厅，不许动！”，随后衣不蔽体的，大声尖叫谩骂着的各色男女被警官带到大厅内。张巡长举着一小袋鸦片在佥事面前晃了晃，说：“看来打明儿晌午这饭，得您自个儿掏钱了。”\n\n警员们将毒贩和妓女们围成一圈。此次“收获”颇丰，发现了大量的鸦片、大麻甚至还有德国的可卡因。就在巡长准备命令他的部下将狎客、毒贩和娼妓们通通拖进警车的时候，一名警官喊道：“大人，您得看看这个！”张蓓交无法相信自己的眼睛，一个高大、金发碧眼的洋人在乌泱泱的犯人中鹤立鸡群，那洋人用很蹩脚的口音说道：“德国大使馆会知道这件事的！我上面有人！”\n\n逮捕这人会体现中央政府急切希望体现的控制力并遏制德国人的影响，但这势必会需要高昂的政治代价。不过另一方面说来，天知道如果张蓓交真的放了这人，又会发生什么……"
  qieflavor.1.a:0 "张巡长逮捕了他"
