--- a/localisation/KR_Qing_l_simp_chinese.yml
+++ b/localisation/KR_Qing_l_simp_chinese.yml
@@ -1936,8 +1936,8 @@
  qieflavor.8.a:0 "逮捕并处决他们！"
  qieflavor.8.b:0 "让他们继续吧"
  qieflavor.9.t:0 "东方的林德伯格"
- qieflavor.9.d:0 "一位名叫孙桐岗的年轻飞行员因驾驶自制的飞机飞越欧亚大陆而声名鹊起。随着最近八省联合内部的剧变，他自愿作为飞行员为我国服役，击败空中来犯的敌人！他最初在南京工作，现在他乘着他的小飞机逃离了躁动的南京。"
- qieflavor.9.a:0 "很好！"
+ qieflavor.9.d:0 "对那些渴望国家富强独立的中国文人们而言，航空飞行这一概念总是会和以洋为师的现代化革新联系在一起。他们相信，凭借着勇气、知识和现代技术，就能建立一个自力更生的中国，在国际舞台上大放光彩，摆脱外国列强的压迫。航空业，特别是军用航空，是国际对抗中的关键力量。掌握了航空技术，就能获得拍摄和使用航空照片的能力，进而获得科学而客观的世界观，换言之，现代而先进的世界观。\n\n被誉为“东方林白”（林白即林德伯格）的孙桐岗和被誉为“中国林白”的张惠长，是中国航空事业发展的两位典范人物。孙桐岗生于1895年，张惠长生于1899年，这两位青年才俊都是不畏艰险的航空先驱与声名大噪的社会名流。\n\n张惠长是美籍华人，自幼被誉为神童的他于1918年成为了孙中山的侍从副官。粤桂战争中，张惠长组织了一支空军部队并亲自参战。张惠长多次身入险境，参加了北伐并在战斗中负伤。不过他的意识形态理念并不足以战胜他对飞行的热爱。于是他成为了一名致力于跨国飞行的社会名流，他的飞行经历让民众对航空事业趋之若鹜，也让他成为了一名民族英雄。\n\n与张惠长一同站在聚光灯下的孙桐岗并非出身美国的飞行学院，而是出身德国。他的经历既是中德之间特殊关系的实际体现，也是那些经过精心计算与大胆挑战的航空冒险者的缩影：他驾驶着自己的私人飞机“救国”号从德国出发飞向中国，并在出发一个月后抵达南京。孙桐岗得到了曹锟总裁的热情接见，并通过媒体和实际行动传播了自己的航空挑战者理念，成为了中国杂志的宠儿。"
+ qieflavor.9.a:0 "航空救国！"
  qieflavor.10.t:0 "来自纽约的流亡者"
  qieflavor.10.d:0 "美国艺术家、作家、图书管理员艾迪丝·克利福德·韦莲司与胡适在纽约相识后，一直保持着书信往来，当时胡适正在纽约哥伦比亚大学读书。她对胡适的政治思想产生了巨大的影响，人们怀疑（虽未证实）两人曾短暂相爱过。\n\n然而，随着战争在美利坚合众国肆虐，韦莲司已经给胡适写信，请求在中国寻求庇护并获得难民身份。胡适已经接受了她的请求，而韦莲司目前正乘船前往北京。"
  qieflavor.10.a:0 "欢迎来到中国！"
