--- a/localisation/HNN_superevents_l_simp_chinese.yml
+++ b/localisation/HNN_superevents_l_simp_chinese.yml
@@ -89,6 +89,12 @@
  COUNTRY_integrated_governorate_DEF: "$NONIDEOLOGYDEF$"
  cannot_change_autonomy_manually: "§R无法手动改变自治等级§!"
 
+ ANQ: "安徽"
+ ANQ_ADJ: "安徽"
+ ANQ_DEF: "安徽"
+ TAN: "哈密"
+ TAN_ADJ: "哈密"
+ TAN_DEF: "哈密"
  MON:0 "蒙古"
  MON_ADJ:0 "蒙古"
  MON_DEF:0 "蒙古"
@@ -98,6 +104,20 @@
  TIB:0 "西藏"
  TIB_ADJ:0 "西藏"
  TIB_DEF:0 "西藏"
+ SZC:0 "四川"
+ SZC_ADJ:0 "四川"
+ SZC_DEF:0 "四川"
+ LEP:0 "宁系"
+ LEP_ADJ:0 "宁系"
+ LEP_DEF:0 "宁系"
+ LEP_LEP_associated_governorate: "八省联合"
+ LEP_LEP_associated_governorate_DEF: "八省联合"
+ LEP_LEP_autonomous_governorate: "八省联合"
+ LEP_LEP_autonomous_governorate_DEF: "八省联合"
+ LEP_LEP_governorate: "八省联合"
+ LEP_LEP_governorate_DEF: "八省联合"
+ LEP_LEP_integrated_governorate: "八省联合"
+ LEP_LEP_integrated_governorate_DEF: "八省联合"
 
  MON_bulid_yi_er: "重建伊尔汗国"
  MON_bulid_jin_zhang: "重建金帐汗国"
